<resources>
    <string name="app_name">Food</string>
    <string name="application_name">Food</string>

    <string name="dont_have_account">Create account</string>
    <string name="login">Login</string>
    <string name="no_login_enter">Continue without sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirm">Are you sure you want to sing out?</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="password_confirm">Password confirm</string>

    <string name="breakfast_menu">Breakfast</string>
    <string name="lunch_menu">Lunch</string>
    <string name="dinner_menu">Dinner</string>
    <string name="own_ideas_menu">Own ideas</string>

    <string name="add_new_category_name">Category name</string>
    <string name="add_new_meal_item">Food name</string>
    <string name="calorie_value_mealitem">Calorie</string>
    <string name="carbohydrate_value_mealitem">Carbohydrate</string>
    <string name="fat_value_mealitem">Fat</string>
    <string name="protein_value_mealitem">Protein</string>
    <string name="default_value_naturals">0</string>

    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_delete">Delete\u0020</string>
    <string name="alert_edit">Editing\u0020</string>
    <string name="alert_adding_meal">Adding new meal</string>
    <string name="alert_adding_category">Adding new category</string>
    <string name="alert_confirm">Are you sure, you want to delete this item?</string>
    <string name="alert_dialog_info">Deleting this category will also delete meals inside!</string>

    <string name="error_email_formula">Enter a valid email formula</string>
    <string name="error_email">Enter email</string>
    <string name="error_password">Enter password</string>
    <string name="error_password_match">Passwords mismatch</string>
    <string name="error_email_confirm">Email is not verified yet</string>
    <string name="error_credentials">Error! Wrong username of password</string>
    <string name="error_process">Process failed!. Try again</string>

    <string name="neutrals">Calorie: %d kcal\nProtein: %d g\nCarbohydrate: %d g\nFat: %d g
    </string>
    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_mark_as_complete">Mark as complete</string>


</resources>
