<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:padding="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_TIL_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextColor="@color/colorAccent"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_TIL_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:errorTextColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirm_TIL_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:errorTextColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_passwordConfirm_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/colorPrimary"
            />
    </LinearLayout>

</RelativeLayout>