<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="Application name"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:padding="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/colorPrimary"
            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:strokeColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>