<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".DashboardActivity"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btn_breakfast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/breakfast" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/breakfast_menu"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:textSize="36sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btn_lunch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/lunch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lunch_menu"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:textSize="36sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btn_dinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dinner_menu"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:textSize="36sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btn_own_ideas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/own_ideas2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/own_ideas_menu"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:textSize="36sp" />

    </FrameLayout>

</LinearLayout>